Fix T47218: OpenGL render with missing alpha, due to recent OpenGL refactoring.

Patch by Ralf Hölzemer.